sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:9: error: ')' expected but integer literal found.
                   position -=1)
                              ^AlgGnomeSort:11: error: ';' expected but 'else' found.
    else if (plusPetit(position+1,position+2)) {position+=1}
    ^